feat: implement colonies, socials, guidelines, audio alerts, and hostels
